# phyloevolve

./: Cargo.toml  README.md
sample-files/: sample.fasta  uniprot.fasta
src/: align.rs  alignmentplot.rs  alignmentstat.rs  alignmerge.rs  args.rs  astruct.rs  colorcoded.rs  filesearch.rs  filterblock.rs  filtersame.rs  filtersite.rs  indelreplace.rs  main.rs  motifsearch.rs  proteincolourcounter.rs  proteinstat.rs  samealignment.rs  samealingment.rs  sitealignment.rs  sitereplace.rs  split.rs  updownstream.rs  view.rs  viewspliced.rs
