[package]
name = "phyloEvolve"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Gaurav Sablok <codeprog@icloud.com>"]
description = "variant analyzer for human genomics"
homepage = "https://github.com/omicscode/phyloevolve"
repository = "https://github.com/omicscode/phyloevolve"

[dependencies]
charts = "0.3.0"
clap = { version = "4.5.27", features = ["derive"] }
colored = "3.0.0"
figlet-rs = "0.1.5"
plotters = "0.3.7"
rayon = "1.10.0"
tokio = { version = "1.47.1", features = ["full"] }
